--- a/0529_css.md
+++ b/0529_css.md
@@ -146,6 +146,12 @@ inline-block이 적용되는 위치는 상대적으로 다르게 표시된다.
 <a href="https://ibb.co/iBZ12d"><img src="https://preview.ibb.co/gtgg2d/2018_05_29_7_39_57.png" alt="2018_05_29_7_39_57" border="0"></a>
 ****
 ### 3. inline-block과 flex의 차이
+**(1)**
 **inline-block**를 사용할 경우, width(넓이)를 직접 정해주어야한다.
 
 **flex**를 사용할 경우, flex값만 지정해주면 알아서 width(넓이)를 정해주기 때문에 따로 계산하여 정할 필요가 없다.
+
+**(2)**
+**inline-block**을 사용할 경우, 넓이를 정해줘야하기 때문에 상위 요소의 width를 넘어갈 경우, 단락이 바뀌어서 나타난다.
+
+**flex**를 사용할 경우, 넓이를 정해주지 않기 때문에 상위요소의 width에 꽉 맞춰 컨텐츠들이 보여진다.
