--- a/Javascripts/180621_const.md
+++ b/Javascripts/180621_const.md
@@ -41,6 +41,18 @@ const goo;
 
 ### 3. 유효 범위
 var은 함수 단위이다.
+```
+var a = 1;
+function b() {
+	a = 4;
+	//에러 나지 않음.
+};
+
+const c = 1;
+function() {
+	c = 4; //에러 발생함.
+};
+```
 const는 블록 단위이다.
 
 ## 3. 배열에서의 const
