--- a/jQuery/180622_[jQuery] 자식제외 클래스의 텍스트 선택하기.md
+++ b/jQuery/180622_[jQuery] 자식제외 클래스의 텍스트 선택하기.md
@@ -39,8 +39,10 @@ console.log(text[0]);
 //결과: 안녕
 ```
 
-## 자식 제외하고 내가 선택한 클래스의 텍스트만 출력하기
+## 자식 제외하고 내가 선택한 클래스의 텍스트만 선택하기
+
 ```
-var text = $('선택하고자 하는 클래스').html().split('<');
-console.log(text[0]);
+
+$('선택하고자 하는 클래스').html().split('<')[0];
+
 ```
