--- a/vue/180906.[Vue] Basic1.md
+++ b/vue/180906.[Vue] Basic1.md
@@ -59,7 +59,7 @@
  > ```
  > 아래와 같이 렌더링 된다.
  > ```javascript
- ><div id = 'example>
+ ><div id = 'example'>
  >   <div> 사용자 정의 컴포넌트 입니다!</div>
  > </div>
  > ```
