til vue conditional rendering- v-if, v-show

--- a/vue/181001. [Vue] Basic 11(조건부 렌더링).md
+++ b/vue/181001. [Vue] Basic 11(조건부 렌더링).md
@@ -145,6 +145,7 @@ export default {
 ```pug
 .div(v-on:scroll="onScroll" ref="divScroll") 
 // .div의 scroll이 움질일 때마다 onScroll이 실행된다.
+// .div 의 height가 설정되어 있어야한다.
 ```
 ```js
 methods: {
