til vue conditional rendering- v-if, v-show

--- a/vue/181001. [Vue] Basic 11(조건부 렌더링).md
+++ b/vue/181001. [Vue] Basic 11(조건부 렌더링).md
@@ -141,7 +141,7 @@ export default {
 위와 같은 경우 `.root1` 과 `.root2` 중 하나만 렌더링 되기 때문에 위와 같이 사용해도 에러가 나지 않는다.
 
 
-### v-scroll 사용하기
+### v-on:scroll 사용하기
 ```pug
 .div(v-on:scroll="onScroll" ref="divScroll") 
 // .div의 scroll이 움질일 때마다 onScroll이 실행된다.
