--- a/vue/180921.[Vue] Basic 8.md
+++ b/vue/180921.[Vue] Basic 8.md
@@ -93,7 +93,7 @@ export default {
 		return {
 			firstName: 'Foo',
 			lastName: 'Bar',
-			fullName" 'Foo Bar'
+			fullName: 'Foo Bar'
 		}
 	},
 	watch: {
