--- a/vue/181011. [Vue] Basic13 - 이벤트 수식어.md
+++ b/vue/181011. [Vue] Basic13 - 이벤트 수식어.md
@@ -1,7 +1,7 @@
 # [Vue] Basic13 - 이벤트 수식어
 
 ## 이벤트 청취
-`v-on` 디렉티브를 사용하여 DOM 이벤트를 듣고 트리거 될 때 JavaScript를 실해앟ㄹ 수 있다.
+`v-on` 디렉티브를 사용하여 DOM 이벤트를 듣고 트리거 될 때 JavaScript를 실행할 수 있다.
 < 예시 >
 ```pug
 #example
