--- a/react/시작하기.md
+++ b/react/시작하기.md
@@ -1,4 +1,104 @@
 ```jsx
+npm install -g create-react-app
+```
+
+```jsx
+create-react-app my-firest-app
+```
+
+vue : npm run serve
+
+react: npm start
+
+- index.js 제일 위에 추가하기
+
+```jsx
+import React from 'react';
+import ReactDOM from 'react-dom';
+import './index.css';
+```
+
+---
+
+### 1. XML이란?
+
+- extensible markup language (확장될 수 있는 표시 언어)
+- html은 약속한 태그들만 사용 가능하다.(<h1></h1>등)
+- xml 태그는 사용자 임의로 만들 수 있다.
+- xml 은 어떠한 데이터를 설명하기 위해 이름을 임의로 지은 태그로 데이터를 감싼다.
+- 태그로 데이터 설명이 가능하다. (Markup)
+
+```xml
+<? xml version="1.0"?>
+<Coding>
+	<C언어> c언어 </C언어>
+	<JAVA> 자바 </JAVA>
+</Coding>
+```
+
+### 2. JSX 이란?
+
+- 자바스크립트의 문법 확장으로 React의 요소를 만든다. React에서 쓰임
+- 별도 파일에 Markup을 넣어 기술을 인위적으로 분리하는 대신 '컴포넌트'로 분리한다.
+
+```jsx
+const user = {
+	firstName: 'lee',
+	lastName: 'soojung'
+};
+
+const element = (
+	<h1>
+		hello, {user.firstName}
+	</h1>
+);
+
+ReactDOM.render(
+	element,
+	document.getElementById('root')
+);
+```
+
+- `class` 는 `className` 으로, `tabindex` 는 `tabIndex` 가 된다.
+
+**JSX 객체 표현**
+
+```jsx
+const element = (
+	<h1 className="greeting">
+		hello, world!
+	</h1>
+);
+
+// 위와 아래는 같은 코드
+
+const element = React.createElement(
+	'h1',
+	{className: 'greeting'},
+	'hello world'
+);
+
+// =>
+
+const element = {
+	type: 'h1',
+	props: {
+		className: 'greeting',
+		children: 'hello, world'
+	}
+};
+```
+
+---
+
+## 개요
+
+### 1. 리액트란 무엇인가?
+
+- 유저 인터페이스 구현을 위한 선언적이고 효율적이며 유연한 JavaScript 라이브러리
+- React는 많은 컴포넌트들을 가지고 있다.
+
+```jsx
 class ShoppingList extends React.Component {
 	render() {
 		return(
